--- a/overview-print.css
+++ b/overview-print.css
@@ -82,6 +82,19 @@ body.dark-mode {
   color: var(--text-color) !important;
 }
 
+#overviewDialogContent.logo-present {
+  position: relative;
+  padding-top: 80px;
+}
+
+#printLogo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80px;
+  height: auto;
+}
+
 h1 {
   text-align: center;
   margin-bottom: 0.5em;
