--- a/style.css
+++ b/style.css
@@ -1863,6 +1863,10 @@ body.dark-mode.pink-mode .help-content { border-color: var(--accent-color); }
   font-size: 1.8em;
   margin-bottom: 0.2em;
 }
+
+#printLogo {
+  display: none;
+}
 #overviewDialogContent h2 {
   font-size: 1.4em;
   margin-top: 1.3em;
