--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@
   :root {
     --page-padding: 5px;
   }
+  main {
+    max-width: none;
+    margin: 0;
+  }
   h2 {
     padding-bottom: 0.3em;
   }
